--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,32 +3,22 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  min-height: 84vh;
+  /* padding: 4rem 0; */
+  margin: 100px;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.main h1 {
+  font-size: 54px;
+  margin: 5px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
+.name {
   color: #0070f3;
   text-decoration: none;
 }
