--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,24 @@
 html,
 body {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: rgb(232, 232, 232);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: rgb(17, 19, 19);
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 * {
