--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,22 +1,30 @@
 .footer {
-    min-height: 8vh;
-    display: flex;
-    flex: 1;
-    padding: 1.8rem 0;
-    border-top: 2px solid #eaeaea;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .footer a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 5px;
-    /* flex-grow: 1; */
-  }
+  /* position: fixed;
+  width: 100%;
+  bottom: 0; */
+  min-height: 8vh;
+  display: flex;
+  flex: 1;
+  padding: 1.8rem 0;
+  border-top: 1px solid #bababa;
+  justify-content: center;
+  align-items: center;
+  background: rgb(17, 19, 19);
 
-  .logo {
-    height: 1em;
-    margin-left: 0.5rem;
-  }
+  -webkit-box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 1);
+  box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 1);
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5px;
+  /* flex-grow: 1; */
+}
+
+.logo {
+  height: 1em;
+  margin-left: 0.5rem;
+}
