--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap');
+
 html,
 body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   color: rgb(232, 232, 232);
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  /* font-family: monospace; */
+  font-family: 'Lato', sans-serif;
   background: rgb(17, 19, 19);
 }
 
