--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 2rem;
+  /* color: black; */
 }
 
 .main {
@@ -54,12 +55,22 @@
   margin: 40px auto;
   max-width: 300px;
   height: auto;
-  
+  transition: transform .2s;
+  /* transform: scale(1.1); */
+
+  padding: 5px;
+  border: 5px solid gray;
+  border-radius: 50%;
 }
 
+
+.pfp:hover {
+  transform: scale(1.12);
+}
+
+
 .round {
-  border: 2px solid rebeccapurple;
-border-radius: 50%;
+  border-radius: 50%;
 }
 
 .connect {
@@ -75,6 +86,15 @@ border-radius: 50%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.icon {
+  max-width: 68px;
+  transition: transform .2s;
+}
+
+.icon:hover {
+  transform: scale(1.15);
 }
 
 /* .description {
