--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap');
-
 html,
 body {
   box-sizing: border-box;
@@ -11,6 +10,10 @@ body {
   /* font-family: monospace; */
   font-family: 'Lato', sans-serif;
   background: rgb(17, 19, 19);
+  /* background: rgb(158, 202, 255);
+  background: rgb(161, 191, 255); */
+
+
 }
 
 *,
