--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,9 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   /* font-family: monospace; */
   font-family: 'Lato', sans-serif;
-  background: rgb(17, 19, 19);
+  /* background: rgb(17, 19, 19); */
+  /* background: rgb(10, 10, 10); */
+  background: #111218;
   /* background: rgb(158, 202, 255);
   background: rgb(161, 191, 255); */
 
