--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -9,11 +9,13 @@
   border-top: 1px solid #bababa;
   justify-content: center;
   align-items: center;
-  background: rgb(17, 19, 19);
+  /* background: rgb(17, 19, 19); */
+  background: rgb(10, 10, 10);
 
   -webkit-box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 1);
   box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 1);
+  font-size: 16px;
 }
 
 .footer a {
@@ -21,6 +23,9 @@
   justify-content: center;
   align-items: center;
   padding: 0 5px;
+  text-decoration: underline;
+  font-weight: bold;
+  font-size: 18px;
   /* flex-grow: 1; */
 }
 
