--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,7 @@
 
 .main {
   min-height: 84vh;
-  margin: 120px;
+  margin: 120px 0 10px 0px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -58,9 +58,9 @@
   transition: transform .2s;
   /* transform: scale(1.1); */
 
-  padding: 5px;
-  border: 5px solid gray;
-  border-radius: 50%;
+  /* padding: 5px; */
+  border: 3px solid rgb(134, 243, 255);
+  border-radius: 10%;
 }
 
 
@@ -70,7 +70,7 @@
 
 
 .round {
-  border-radius: 50%;
+  border-radius: 10%;
 }
 
 .connect {
@@ -89,7 +89,7 @@
 }
 
 .icon {
-  max-width: 68px;
+  max-width: 64px;
   transition: transform .2s;
 }
 
@@ -97,67 +97,71 @@
   transform: scale(1.15);
 }
 
-/* .description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-} */
-
-/* .code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.about {
+  margin: 0 auto;
+  max-width: 1200px;
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  word-spacing: 5px;
+  line-height: 1.6;
+  
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
+/* .about h1 {
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
 } */
 
-/* .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.about_content {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  margin: 0;
+  /* flex-wrap: wrap; */
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.hero1 {
+  margin-left: auto;
+  max-width: 500px;
+}
+
+.hero2 {
+  margin-right: auto;
+  max-width: 500px;
+
+}
+
+.tech {
+  /* max-width: 1200px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  gap: 10px 20px; 
+  row-gap: 10px;
+  column-gap: 20px;
+}
+
+/* .tech > * {
+  flex: 1 1 140px;
+  max-width: 140px;
 } */
+
+.tech_icon {
+  /* min-width: 100px; */
+  max-width: 140px;
+  flex: 1 0 20%;
+  margin: 15px;
+  transition: transform .2s;
+}
+
+
+.tech_icon:hover {
+  transform: scale(1.15);
+}
