--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,7 +7,7 @@
   margin: 0;
   padding: 0.2rem;
   /* background: rgb(17, 19, 19); */
-  background: rgb(10, 10, 10, 0.4);
+  background: rgb(10, 10, 10);
   
   -webkit-box-shadow: 0px 5px 20px 0px rgba(0,0,0,1);
 -moz-box-shadow: 0px 5px 20px 0px rgba(0,0,0,1);
