--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -40,6 +40,24 @@ box-shadow: 0px 5px 20px 0px rgba(0,0,0,1);
 
 .navLogo {
   margin-right: auto;
-  cursor: pointer;
+  cursor: pointer;  
 }
 
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+}
+
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1200px) {
+
+}
+
+@media only screen and (min-width: 1201px) {
+  
+}
