--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,8 +1,8 @@
 .header {
-    z-index: 1;
-    position: fixed;
-    top: 0;
-    width: 100%;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  width: 100%;
   background: rgb(10, 10, 10);
 
   /* border-bottom: 1px solid #e2e8f0; */
@@ -38,12 +38,12 @@
 
 .navitem {
   margin-left: 5rem;
-  transition: transform .2s;
+  transition: transform 0.2s;
   /* cursor: pointer; */
 }
 
 .navitem:hover {
-    transform: scale(1.12);
+  transform: scale(1.12);
 }
 
 .navlink {
@@ -82,16 +82,13 @@
 }
 
 .footer a {
-    margin: 0 5px;
-    text-decoration: underline;
-    /* display: flex;
+  margin: 0 5px;
+  text-decoration: underline;
+  /* display: flex;
   justify-content: center;
   align-items: center;
   flex-grow: 1; */
 }
-
-
-  
 
 @media only screen and (max-width: 768px) {
   .navmenu {
