--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -90,6 +90,14 @@
   flex-grow: 1; */
 }
 
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+
+    .navlogo {
+        font-size: 25px;
+    }
+
+}
+
 @media only screen and (max-width: 768px) {
   .navmenu {
     z-index: 100;
